# home

./: .gitignore  Cargo.toml  README.md  deploy.sh
src/: homekit.rs  main.rs
src/devices/: mod.rs  mtrf_dev.rs
src/devices/proxy/: mod.rs  switch.rs
src/home/: handlers.rs  mod.rs
src/home/rooms/: bedroom.rs  hall.rs  mod.rs
src/infra/: hap_infra.rs  mod.rs  mtrf_wire.rs
src/infra/mtrf_infra/: mod.rs  mtrf_wire.rs
src/infra/telegram/: mod.rs
