[package]
name = "home"
version = "0.1.0"
edition = "2018"

[dependencies]
parking_lot = "0.11"
rocket = "0.5.0-rc.1"
mtrf = { git = "https://github.com/RIg410/MTRF.git" }
hap = { git = "https://github.com/ewilken/hap-rs.git" }
log = "0.4"
env_logger = "0.6.2"
anyhow = "1.0.26"
mac_address = "1.1.2"
rand = "0.7.3"
futures = "0.3.16"
once_cell = "1.8.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serialport = "*"